# ffmpeg_resize_rotate

./: 0.nv21  CMakeLists.txt  Scale.c  Scale.h  common.h  convert.c  convert.h  filter.c  filter.h  function.c  function.h  main.c  scale_h.c  scale_h.h  scale_v.c  scale_v.h  slice.c  slice.h
.history/: Scale_20200810160941.c  main_20200810173621.c  main_20200810174306.c  main_20200810174634.c  main_20200810174704.c  main_20200810174714.c  main_20200810174914.c  main_20200810174955.c  main_20200810175006.c  main_20200810175029.c  main_20200810175143.c  main_20200810175202.c  slice_20200810174437.c  slice_20200810174801.c  slice_20200810174814.c  slice_20200810174837.c  slice_20200810174939.c  slice_20200810175217.c
